--- a/www/webpages/index.html
+++ b/www/webpages/index.html
@@ -14,6 +14,7 @@ body {
     margin: 0;
     padding: 0;
     text-align: center;
+    background-color: rgb(249, 91, 249);
     background-image: url("../img/hello-kitty.gif");
 }
 
